--- a/ProjectRPA/src/main/webapp/resources/CSS/register.css
+++ b/ProjectRPA/src/main/webapp/resources/CSS/register.css
@@ -15,7 +15,11 @@
     	width: 400px;
     	transform: translate(-50%);
 	}
-	h1{text-align: center; font-weight:10;}
+	
+	h1{
+		text-align: center; font-weight:10;
+	
+	}
 
 	h3 {
 	    margin: 19px 0 8px;
@@ -24,11 +28,11 @@
 	    
     }
     .p {
-		display: block;
+   		 display: block;
 	   	position: relative;
 	   	width: 100%;
 		height: 29px;
-	    background: #FFF7D8;
+	    background: #fcfbf8;
 	    border-bottom :solid 1px;
 	    border-top:#dad295;
 	    border-right:#dad295;
@@ -55,7 +59,6 @@
  	   font-family: Dotum,'돋움',Helvetica,sans-serif;    
 	}
 	.join{
-		border: window;
 		width: 100%;
 		height: 50%;
 	}
@@ -78,25 +81,81 @@
 	#idc {
 	font-size:12px;
 	font-weight:lighter;
-	border: window;
 	border-color: #FFEDCC;
 	background:#FFF2C4;
 	width:90px;
 	height: 30px;
-}
+	}
+	
 	#idc:hover {
 		cursor: pointer;
 		background:#FFF7D8;
 		border: solid 1px; 
-}
-
-	/* 중복아이디 존재하지 않는경우 */
+	}
+	
 	.id_check_1{
 		color : green;
 		display : none;
-}
-	/* 중복아이디 존재하는 경우 */
+		font-size: 12px;
+
+	}
 	.id_check_2{
 		color : red;
 		display : none;
-}
+		font-size: 12px;
+	}
+
+	.final_id_ck{
+	    display: none;
+	    color : red;
+		font-size: 12px;
+	}
+
+	.final_pw_ck{
+	    display: none;
+	    color : red;
+		font-size: 12px;
+	}
+
+	.final_pwck_ck{
+	    display: none;
+	    color : red;
+		font-size: 12px;
+	}
+
+	.final_name_ck{
+	    display: none;
+	    color : red;
+		font-size: 12px;
+	}
+
+	.final_phone_ck{
+		display: none;
+		color : red;
+		font-size: 12px;
+	}
+
+	.final_email_ck{
+	    display: none;
+	    color : red;
+		font-size: 12px;
+	}
+
+	.final_addr_ck{
+	    display: none;
+	    color : red;
+		font-size: 12px;
+	}
+	
+	.pwck_input_re_1{
+        color : green;
+        display : none; 
+		font-size: 12px;   
+	}
+	.pwck_input_re_2{
+        color : red;
+        display : none;
+		font-size: 12px;    
+	}    
+	
+	 
