--- a/ProjectRPA/src/main/webapp/resources/CSS/main/main.css
+++ b/ProjectRPA/src/main/webapp/resources/CSS/main/main.css
@@ -4,11 +4,36 @@
 	box-sizing: border-box;
 	top: 0;
 }
+/*화살표*/
+.Arrowin{
+	width: 30px;
+	display: flex;
+	margin-right: 10px;
+}
+.Arrowout1{
+	float: left;
+	
+}
+.Arrowout2{
+
+	position: static;
+	
+}
+/*화살표 끝*/
+/*글자*/
+.letter{
+	margin-bottom: 30px;
+}
+/*글자끝*/
 ul{
 	list-style: none;
 }
 li{
 	list-style: none;
+}
+hr{
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 .a{
 	background-color:black;
@@ -35,12 +60,14 @@ li{
 /*뒷배경 이미지*/
 .backgroundimg{
 	position: absolute;
+	
 }
 .backgroundimg-one{
 	width: 1000px;
 	margin: -100px auto;
 	opacity: 0.5;
 }
+
 /*뒷배경 이미지 끝*/
 
 /*네비게이션*/
@@ -89,6 +116,7 @@ li{
 .menu a:hover::after{
 	width: 100%;
 }
+
 /*네비게이션*/
 
 /*로그인*/
@@ -162,6 +190,7 @@ li{
 footer{
 	width: 100%;
 	height: 100px;
+
 	background-color: black;
 }
 
@@ -243,3 +272,111 @@ label.right{
 }
 /*슬라이드 css*/
 /*본문*/
+/*지도 api*/
+.map{
+	width: 100%;
+	margin: 0 auto;
+}
+.blank{
+	height: 150px;
+}
+/*지도 api 끝*/
+/*시설소개*/
+.background{
+	position: static;
+	width: 800px;
+
+	
+	margin: 0 auto;
+}
+.Facilityimg{
+	height: 450px;
+	
+	position: relative;
+	margin: 0 auto;
+	
+}
+.one-block{
+	width: 350px;
+	float: left;
+	height: 200px;
+	
+	margin-right: 40px;
+	margin-bottom: 10px;
+}
+.Facilityscreen{
+	display: flex;
+	float: left;
+	width: 70%;
+	
+	background-color: #666666;
+}
+.Facilitypoint{
+	margin-left: 10px;
+}
+/*시설소개 끝*/
+/*강사소개*/
+.instructorbox{
+	position: relative;
+	width: 800px;
+	height: 1000px;
+	margin: 0 auto;
+	
+}
+.instructorboxcenter{
+	width: 700px;
+	height: 800px;
+	margin: 0 auto;
+	
+}
+.instructorimg{
+	width: 100%;
+	height: 210px;
+	border-radius:30px;
+}
+.instructorboxmain{
+	float: left;
+	margin-right: 20px;
+	width: 200px;
+	height: 500px;
+	border-radius:30px;
+	box-shadow: 3px 5px 3px 4px #999;
+}
+.instructortext{
+	
+}
+.prom{
+	margin-top: 50px;
+	float: left;
+	width: 780px;
+	
+}
+.Space{
+	margin: 0 auto;
+	width: 200px;
+	display: inline-block;
+	margin-right: 20px;
+}
+.line{
+	border-left : thick solid #32a1ce;
+  	height : 50px;
+	
+}
+.check{
+	display: inline-block;
+	border-right:1px solid darkgray;
+	
+	height: 250px;
+}
+.blank2{
+	display: inline-block;
+	width: 1px;
+}
+.pontcenter{
+	display: inline;
+	width: 420px;
+	text-align: center;
+	margin: 0 auto;
+	margin-top: 30px;
+}
+/*강사소개 끝*/
